--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,12 @@
     "issues": "https://github.com/browscap/browscap/issues",
     "source": "https://github.com/browscap/browscap"
   },
+  "repositories": [
+      {
+          "type": "vcs",
+          "url": "https://github.com/jaydiablo/browscap-php"
+      }
+  ],
   "require": {
     "php": "^7.0",
     "symfony/console": "^3.2",
@@ -37,7 +43,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
-    "browscap/browscap-php": "dev-master",
+    "browscap/browscap-php": "dev-support-pattern-ids",
     "mikey179/vfsStream": "^1.6",
     "squizlabs/php_codesniffer": "^2.8",
     "friendsofphp/php-cs-fixer": "^1.11",
